fix(2ndsidebar): z-index

--- a/app/styles/components/secondary-sidebars/secondary-sidebar.less
+++ b/app/styles/components/secondary-sidebars/secondary-sidebar.less
@@ -8,7 +8,7 @@
     overflow-x: hidden;
     border-right: 1px #ddd solid;
     transition: left 0.218s @ease-in-out;
-    z-index: 100;
+    z-index: 3;
     // TODO remove this
     // background-color: #555;
 
